--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>bio by kgonz</title>
+    <title>K Gonzales by kgonz</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>bio</h1>
-        <p></p>
+        <h1>K Gonzales</h1>
+        <p>Climate scientist</p>
 
 
         <p class="view"><a href="https://github.com/kgonz">View My GitHub Profile</a></p>
